--- a/responsive.css
+++ b/responsive.css
@@ -4,7 +4,7 @@
 @media screen and (max-width: 992px) {
     
     nav {
-        padding: 30px 30px ;
+        padding: 30px 30px 0 30px ;
     }
 
     .responsive-menu {
@@ -15,4 +15,68 @@
         display: none;
     }
 
+    .header-banner {
+        padding: 30px 30px 0 30px ;
+    }
+
+    .banner-title {
+        font-size: 2.25rem;
+        font-weight: 700;
+        line-height: 50px;
+    }
+
+    .sponsors-container {
+        padding : 42px 30px 40px;
+        gap: 80px;
+    } 
+
+}
+
+
+
+/* --------------------medium device styles------------------- */
+
+@media screen and (max-width: 768px) {
+
+    .banner-title {
+        font-size: 1.80rem;
+        font-weight: 700;
+        line-height: 30px;
+    }
+
+    .banner-description {
+        color: #3A3A3A;
+        font-family: Poppins;
+        font-size: 1rem;
+        font-weight: 400;
+        margin: 16px 0;
+    }
+    
+}
+
+
+
+
+/* -----------------------small device styles---------------- */
+
+@media screen and (max-width: 576px) {
+    .header-banner {
+        flex-direction: column-reverse;
+        gap: 50px;
+    }
+
+    .banner-title {
+        font-size: 2.25rem;
+        font-weight: 700;
+        line-height: 50px;
+    }
+
+    .banner-left{
+        width: 100%;
+    }
+
+
+    .banner-right {
+        width: 80%;
+    }
 }
