--- a/style.css
+++ b/style.css
@@ -23,15 +23,19 @@ body {
     overflow: hidden;
 }
 
-.responsive-menu {
+.responsive-menu  {
     display: none;
-    color: #3A3A3A;
     font-size: 1.5rem;
     font-weight: 100;
-    padding: 6px 5px;
+    padding: 6px 6px;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.253);
     border-radius: 5px;
+    margin-bottom: 10px;
 
+}
+
+.responsive-menu a {
+    color: #3A3A3A;
 }
 
 
@@ -106,7 +110,7 @@ nav ul li a {
     margin: 16px 0;
 }
 
-.banner-button {
+.button {
     display: inline-flex;
     padding: 10px 24px;
     align-items: flex-start;
@@ -117,7 +121,7 @@ nav ul li a {
     
 }
 
-.banner-button button {
+.button button {
     color: #FFF;
     font-family: Poppins;
     font-size: 1rem;
@@ -128,7 +132,7 @@ nav ul li a {
     transition: 0.5s ease-in-out;
 }
 
-.banner-button button:hover {
+.button button:hover {
     padding-right: 15px;
 }
 
@@ -179,6 +183,185 @@ nav ul li a {
     transform: scale(1.1) translateY(-3px);
 }
 
+
+
+/* ---------------item prising card styles--------------- */
+.item-prising-card-container-title {
+    color: #3A3A3A;
+    font-family: Poppins;
+    font-size: 1.75rem;
+    font-weight: 600;
+    line-height: 70px;
+    text-align: center;
+    margin-top: 100px;
+}
+
+.item-prising-card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 30px;
+    padding: 0 196px 50px;
+    gap: 30px;
+
+}
+
+
+
+.card {
+    padding: 17px 15px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.item-picture {
+    width: 100%;
+}
+
+.item-title {
+    color: #18191F;
+    font-family: Poppins;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+    margin-top: 1rem;
+}
+
+.item-prise {
+    color: var(--Dark-Color, rgba(0, 0, 0, 0.87));
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.item-rating-counter {
+    display: inline;
+    color: var(--gray-80, #5E6366);
+    font-family: Roboto;
+    font-size: 0.875rem;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0.1px;
+    padding-left: 10px;
+    
+}
+
+.item-description {
+color:  #787885;
+font-family: Inter;
+font-size: 14px;
+font-weight: 700;
+line-height: 143%;
+letter-spacing: 0.252px;
+}
+
+
+.see-more-link {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 196px;
+    
+}
+
+.see-more-link a {
+    color: #e02c6dde;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none  ;
+    margin-right: 10px;
+}
+
+/* ----------featured-section-style-------- */
+
+.featured-section {
+    padding: 100px 165px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+
+.featured-section-left {
+    width: calc(40% - 48px);
+}
+
+.featured-section-left img {
+    width: 100%;
+}
+
+
+.featured-section-right {
+    width: calc(60% - 48px);
+}
+
+.featured-section-title {
+    color: #0A0826;
+    font-family: Poppins;
+    font-size: 2.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px;
+    margin-bottom: 16px;
+}
+
+.featured-section-description {
+    color: #6C6C6C;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 16px;
+}
+
+
+/* ---------------footer styles----------- */
+.footer {
+    text-align: center;
+    padding-top: 50px;
+    background: #0A0826;
+}
+
+.footer-title {
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.footer-description {
+    color: #D9DBE1;
+    font-family: Manrope;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.social-link {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    margin: 17px 0 50px 0;
+}
+
+.social-link a {
+    font-size: 1.50rem;
+    color: #FFF;
+    transition: 0.8s;
+
+}
+
+
+.social-link a:hover {
+    transform: translateY(-5px);
+}
 
 
 
