--- a/responsive.css
+++ b/responsive.css
@@ -53,7 +53,7 @@
     }
 
     .featured-section {
-        padding: 100px 30px 0;
+        padding: 100px 30px 50px;
     }
 
     .featured-section-left {
@@ -122,6 +122,7 @@
     .featured-section-right {
         width: 100%;
         text-align: center;
+        padding-bottom: 50px;
     }
 
     .see-more-link {
